delete image file and added message codes for file >> file routes
